--- a/fitness-online-tarifas.html
+++ b/fitness-online-tarifas.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Ejercicios aeróbicos para ponerte en forma desde casa. Entrena con nuestros vídeos de rutinas de ejercicios cordiovasculares.</title>
+    <title>Fitness online para realizar ejercicios en casa. Entrena con nuestras rutinas de vídeos fitness para hombre y mujeres - ictiva</title>
 
     <!-- Google Optimze -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,16 +46,16 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Ejercicios aeróbicos para tu entrenamiento diario. Clases, vídeos y rutinas para ponerte en forma desde casa." />
-    <meta name="keywords" content="Ejercicios en casa, aerobic, steps, combat, tbc, rutinas de ejercicios, ejercicios aerobicos, aerobic en casa" />
+    <meta name="description" content="Ejercicios Fitness en casa para tu entrenamiento diario. Clases, vídeos y rutinas para hombres y mujeres fitness." />
+    <meta name="keywords" content="Fitness online, fitness en casa, fitness videos, video fitness, fitness, entrenamiento fitness, ejercicios fitness, mujeres fitness, hombres fitness, rutinas fitness, fitness gym" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Ejercicios aeróbicos para ponerte en forma desde casa. Entrena con nuestros vídeos de rutinas de ejercicios cordiovasculares." />
-    <meta property="og:description" content="Ejercicios aeróbicos para tu entrenamiento diario. Clases, vídeos y rutinas para ponerte en forma desde casa." />
-    <meta property="og:url" content="https://www.ictiva.com/homes/ejercicios-aerobicos.html" />
+    <meta property="og:title" content="Fitness online para realizar ejercicios en casa. Entrena con nuestras rutinas de vídeos fitness para hombre y mujeres." />
+    <meta property="og:description" content="Ejercicios Fitness en casa para tu entrenamiento diario. Clases, vídeos y rutinas para hombres y mujeres fitness." />
+    <meta property="og:url" content="https://www.ictiva.com/homes/fitness-online-tarifas.html" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
 
-    <link rel=”canonical” href=”https://www.ictiva.com/homes/ejercicios-aerobicos.html” />
+    <link rel=”canonical” href=”https://www.ictiva.com/homes/fitness-online-tarifas.html” />
 
     <!--Icon, favicon & webapp -->
     <link rel="shortcut icon" href="homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
@@ -94,25 +94,25 @@
 
     <div id="menu-wrap" class="container-fluid bg-white fixed-top">
         <div class="row my-2">
-            <nav class="navbar navbar-toggleable-md navbar-light col-4 col-lg-3 bg-white">
+            <nav class="navbar navbar-toggleable-md navbar-light col-4 col-lg-4 bg-white">
                 <div class="container pl-lg-0">
                     <a class="navbar-brand" href="#page-top">
                         <img src="https://www.ictiva.com/img/logo_ictiva.svg" width="auto" height="auto" alt="ictiva-logo" class="img-fluid">
                     </a>
                 </div>
             </nav>
-            <div class="col-lg-6 no-padding bg-white hidden-md-down pt-2">                
+            <div class="col-lg-4 no-padding bg-white hidden-md-down pt-2">                
                 <div class="w-100 text-center">
                     <p class="h1 mb-0">Tu Gimnasio Online</p>
                 </div>
             </div>
-            <div class="col-8 col-lg-3 no-padding bg-white">
+            <div class="col-8 col-lg-4 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
-                    <li class="bg-grey p-0 py-sm-2 p-xl-2">
+                    <li class="bg-grey p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-dark btn btn-double text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2">
-                        <a class="text-white btn btn-double text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">PRUEBA GRATIS</a>
+                        <a class="text-white btn btn-double text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">Inicia tu Entrenamiento</a>
                     </li>
                 </ul>
             </div>
@@ -122,23 +122,23 @@
     <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding">
-                <h1 class="display-1 text-white text-uppercase text-shadow less2">Ejercicios Aeróbicos</h1>
-                <h2 class="text-white font-weight-bold py-5 px-2 less">Ponte En forma desde casa</h2>
+                <h1 class="display-1 text-white text-uppercase text-shadow">Fitness Online</h1>
+                <h2 class="text-white font-weight-bold py-5 px-2">Tus ejercicios de Fitness en casa</h2>
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-aerobicos&utm_medium=adwords-landing&utm_campaign=aerobicos">PRUEBA GRATIS</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">Inicia tu Entrenamiento Ahora</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-aerobicos&utm_medium=adwords-landing&utm_campaign=aerobicos">PRUEBA GRATIS</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">Inicia tu Entrenamiento Ahora</a></p>
                     </div>
                   </div>
                 </div>
             </div>
         </div>
         <video autoplay loop muted class="w-100 hidden-lg-down">
-            <source src="homes/video/video1-aerobic-combat.webm" type="video/webm">
-            <source src="homes/video/video1-aerobic-combat.mp4" type="video/mp4">
+            <source src="homes/video/fondo_video_ictiva_1080.webm" type="video/webm">
+            <source src="homes/video/fondo_video_ictiva_1080.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
         </video>
     </header>
@@ -176,44 +176,55 @@
             </div>
         </div>
     </section>
-    <section class="no-padding">
-        <div class="container-fluid bg-aerobicos">
-            <div class="row no-gutter">
-                <div class="col-lg-6 rc-bg py-5 hover-box cl-box">
-                    <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h2 class="py-5 text-white display-4 text-uppercase">Aerobic</h2>
-                        <p class="lead text-bigger text-white px-2 px-md-0">Ejercicios de Aeróbic para adelgazar</p>
-                    </div>
+    <section class="no-padding" id="top-section">
+        <div class="container-fluid">
+            <div class="row no-padding">
+                <div class="col-md-6 no-padding text-center block">                    
+                    <figure class="cl-box">
+                        <img class="img-fluid" src="homes/img/fotos/perdida-de-peso.jpg" height="auto" width="100%" alt="">                            
+                        <figcaption class="cl-content">
+                            <h2 class="mx-0 mx-sm-4 text-white display-4 text-uppercase">Entrenamiento Fitness por niveles</h2>
+                            <div class="hidden-sm-down text-white">
+                                <p class="lead mt-5 text-bigger">Principiante</p>
+                                <p class="lead text-bigger">Básico</p>
+                                <p class="lead text-bigger">Medio</p>
+                                <p class="lead text-bigger">Avanzado</p>
+                                <p class="lead text-bigger">Pro</p>
+                                <p class="py-5">
+                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">Inicia tu Entrenamiento Ahora</a>
+                                </p>
+                            </div>
+                        </figcaption>
+                    </figure>
                 </div>
-                <div class="col-lg-6 lw-bg py-5 hover-box cl-box">
-                    <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h2 class="py-5 text-white display-4 text-uppercase">Steps</h2>
-                        <p class="lead text-bigger text-white px-2 px-md-0">Clases de Steps online</p>
-                    </div>
-                </div>
-                <div class="col-lg-6 sp-bg py-5 hover-box cl-box">
-                    <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h2 class="py-5 text-white display-4 text-uppercase">Combat</h2>
-                        <p class="lead text-bigger text-white px-2 px-md-0">Ejercicios para quemar grasa y celulitis</p>
-                    </div>
-                </div>
-                <div class="col-lg-6 tu-bg py-5 hover-box cl-box">
-                    <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h2 class="py-5 text-white display-4 text-uppercase">Total Body</h2>
-                        <p class="lead text-bigger text-white px-2 px-md-0">TBC para tonificar todo tu cuerpo</p>
-                    </div>
+                <div class="col-md-6 no-padding text-center block">                    
+                    <figure class="cl-box">
+                        <img class="img-fluid" src="homes/img/fotos/tonificar.jpg" height="auto" width="100%" alt="">                            
+                        <figcaption class="cl-content">
+                            <h2 class="mx-0 mx-sm-4 text-white display-4 text-uppercase">Hombres y Mujeres Fitness</h2>
+                            <h4 class="mx-0 mx-sm-4 text-white text-uppercase hidden-sm-down">Sea cual sea tu objetivo, tenemos sesiones para ti:</h4>
+                            <div class="hidden-sm-down text-white">
+                                <p class="lead mt-5 text-bigger">Perder peso</p>
+                                <p class="lead text-bigger">Tonificar tu cuerpo</p>
+                                <p class="lead text-bigger">Ganar masa muscular</p>
+                                <p class="py-5">
+                                    <a class="btn btn-cta btn-primary btn-xl" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">Inicia tu Entrenamiento Ahora</a>
+                                </p>
+                            </div>
+                        </figcaption>
+                    </figure>
                 </div>
             </div>
         </div>
     </section>
 
-    <div class="container-fluid py-5 px-sm-5 bg-motiaerobicos">
+    <div class="container-fluid py-5 px-sm-5 bg-motitrainer">
         <div class="row py-5 my-0 align-items-center h-100">
             <div class="col-12 offset-md-4 col-md-8 text-white text-right px-md-5">
-              <h3 class="display-3 py-4 text-uppercase">Entrena con nuestros videos de ejercicios</h3>
-              <p class="lead py-2 text-bigger">La herramienta perfecta para entrenar en casa que te premia por mantenerte activo!</p>
+              <h3 class="display-3 py-4 text-uppercase">Entrena con nuestros videos de Fitness</h3>
+              <p class="lead py-2 text-bigger">La herramienta perfecta para ponerte en forma en casa que te premia por mantenerte activo!</p>
               <p class="py-5">
-                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-aerobicos&utm_medium=adwords-landing&utm_campaign=aerobicos">PRUEBA GRATIS</a>
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness">Inicia tu Entrenamiento Ahora</a>
                 </p>
             </div>
         </div>
@@ -221,11 +232,11 @@
     <div class="container-fluid py-5 px-sm-5 bg-app">
         <div class="row py-0 py-lg-5 my-0 align-items-center h-100">
             <div class="col-12 col-md-10 col-lg-9 text-white px-md-5">
-              <h3 class="display-4 py-4 text-uppercase">Tu rutina de ejercicios para entrenar en casa</h3>
+              <h3 class="display-4 py-4 text-uppercase">Tu rutina Fitness para entrenar en casa</h3>
               <p class="lead py-4 text-bigger">Crea tu objetivo, compártelo, reta a tus amigos y haz de ti tu mejor versión.</p>
               <p>Descárgate la aplicación aquí:</p>
-              <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&?utm_source=ejercicios-aerobicos&utm_medium=adwords-landing&utm_campaign=aerobicos" target="_blank"><img src="homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
-              <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&?utm_source=ejercicios-aerobicos&utm_medium=adwords-landing&utm_campaign=aerobicos" target="_blank"><img src="homes/img/logos-footer/apple-store.png" class="img-fluid img-logo" alt="apple app" width="194" height="75"></a>
+              <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness" target="_blank"><img src="homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
+              <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&?utm_source=fitness-online&utm_medium=adwords-landing&utm_campaign=fitness" target="_blank"><img src="homes/img/logos-footer/apple-store.png" class="img-fluid img-logo" alt="apple app" width="194" height="75"></a>
             </div>
         </div>
     </div>
