--- a/ejercicios-para-adelgazar.html
+++ b/ejercicios-para-adelgazar.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="es-ES" />
 
-    <title>Ejercicios aeróbicos para ponerte en forma desde casa. Entrena con nuestros vídeos de rutinas de ejercicios cordiovasculares.</title>
+    <title>Ejercicios para adelgazar desde casa. Entrena con nuestros vídeos de rutinas de ejercicios para perder peso y quemar grasa.</title>
 
     <!-- Google Optimze -->
     <style>.async-hide { opacity: 0 !important} </style>
@@ -46,16 +46,16 @@
     <!-- End Facebook Pixel Code -->
 
     <meta name="verification" content="81bd71e1f26eb0b3898a5e427df1b4df" />
-    <meta name="description" content="Ejercicios aeróbicos para tu entrenamiento diario. Clases, vídeos y rutinas para ponerte en forma desde casa." />
-    <meta name="keywords" content="Ejercicios en casa, aerobic, steps, combat, tbc, rutinas de ejercicios, ejercicios aerobicos, aerobic en casa" />
+    <meta name="description" content="Planes de entrenamiento diario de ejercicios para adelgazar. Clases, vídeos, rutinas y dietas para perder peso en casa de forma cómoda." />
+    <meta name="keywords" content="Ejercicios para adelgazar, ejercicios para perder peso, dieta para adelgazar, dieta para perder peso, rutina para adelgazar, rutinas para perder peso, bajar peso, perder kilos" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Ejercicios aeróbicos para ponerte en forma desde casa. Entrena con nuestros vídeos de rutinas de ejercicios cordiovasculares." />
-    <meta property="og:description" content="Ejercicios aeróbicos para tu entrenamiento diario. Clases, vídeos y rutinas para ponerte en forma desde casa." />
-    <meta property="og:url" content="https://www.ictiva.com/homes/ejercicios-aerobicos.html" />
+    <meta property="og:title" content="Ejercicios para adelgazar desde casa. Entrena con nuestros vídeos de rutinas de ejercicios para perder peso y quemar grasa." />
+    <meta property="og:description" content="Planes de entrenamiento diario de ejercicios para adelgazar. Clases, vídeos, rutinas y dietas para perder peso en casa de forma cómoda." />
+    <meta property="og:url" content="https://www.ictiva.com/homes/ejercicios-para-adelgazar.html" />
     <meta property="og:site_name" content="ictiva, tu gimnasio online" />
     <meta property="og:image" content="https://www.ictiva.com/img/logo_ictiva.svg" />
 
-    <link rel=”canonical” href=”https://www.ictiva.com/homes/ejercicios-aerobicos.html” />
+    <link rel=”canonical” href=”https://www.ictiva.com/homes/ejercicios-para-adelgazar.html” />
 
     <!--Icon, favicon & webapp -->
     <link rel="shortcut icon" href="homes/img/favicon.ico" type="image/vnd.microsoft.icon" />
@@ -101,7 +101,7 @@
                     </a>
                 </div>
             </nav>
-            <div class="col-lg-6 no-padding bg-white hidden-md-down pt-2">                
+            <div class="col-lg-6 no-padding bg-white hidden-md-down pt-2">
                 <div class="w-100 text-center">
                     <p class="h1 mb-0">Tu Gimnasio Online</p>
                 </div>
@@ -122,15 +122,15 @@
     <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding">
-                <h1 class="display-1 text-white text-uppercase text-shadow less2">Ejercicios Aeróbicos</h1>
-                <h2 class="text-white font-weight-bold py-5 px-2 less">Ponte En forma desde casa</h2>
+                <h1 class="display-1 text-white text-uppercase text-shadow less3">Ejercicios Para Adelgazar</h1>
+                <h2 class="text-white font-weight-bold py-5 px-2 less">Planes de entrenamiento y dietas para perder peso en casa</h2>
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-aerobicos&utm_medium=adwords-landing&utm_campaign=aerobicos">PRUEBA GRATIS</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar">PRUEBA GRATIS</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-aerobicos&utm_medium=adwords-landing&utm_campaign=aerobicos">PRUEBA GRATIS</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar">PRUEBA GRATIS</a></p>
                     </div>
                   </div>
                 </div>
@@ -181,26 +181,22 @@
             <div class="row no-gutter">
                 <div class="col-lg-6 rc-bg py-5 hover-box cl-box">
                     <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h2 class="py-5 text-white display-4 text-uppercase">Aerobic</h2>
-                        <p class="lead text-bigger text-white px-2 px-md-0">Ejercicios de Aeróbic para adelgazar</p>
+                        <h2 class="py-5 text-white display-4 text-uppercase">Entrenamiento para perder peso</h2>
                     </div>
                 </div>
                 <div class="col-lg-6 lw-bg py-5 hover-box cl-box">
                     <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h2 class="py-5 text-white display-4 text-uppercase">Steps</h2>
-                        <p class="lead text-bigger text-white px-2 px-md-0">Clases de Steps online</p>
+                        <h2 class="py-5 text-white display-4 text-uppercase">Ejercicios para quemar celulitis</h2>
                     </div>
                 </div>
                 <div class="col-lg-6 sp-bg py-5 hover-box cl-box">
                     <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h2 class="py-5 text-white display-4 text-uppercase">Combat</h2>
-                        <p class="lead text-bigger text-white px-2 px-md-0">Ejercicios para quemar grasa y celulitis</p>
+                        <h2 class="py-5 text-white display-4 text-uppercase">Rutinas para quemar calorías</h2>
                     </div>
                 </div>
                 <div class="col-lg-6 tu-bg py-5 hover-box cl-box">
                     <div class="text-center py-5 my-0 my-lg-5 cl-content">
-                        <h2 class="py-5 text-white display-4 text-uppercase">Total Body</h2>
-                        <p class="lead text-bigger text-white px-2 px-md-0">TBC para tonificar todo tu cuerpo</p>
+                        <h2 class="py-5 text-white display-4 text-uppercase">Ejercicios para reducir grasa corporal</h2>
                     </div>
                 </div>
             </div>
@@ -209,11 +205,22 @@
 
     <div class="container-fluid py-5 px-sm-5 bg-motiaerobicos">
         <div class="row py-5 my-0 align-items-center h-100">
-            <div class="col-12 offset-md-4 col-md-8 text-white text-right px-md-5">
-              <h3 class="display-3 py-4 text-uppercase">Entrena con nuestros videos de ejercicios</h3>
-              <p class="lead py-2 text-bigger">La herramienta perfecta para entrenar en casa que te premia por mantenerte activo!</p>
+            <div class="col-12 offset-md-2 col-md-10 text-white text-right px-md-5">
+              <h3 class="display-4 py-4 text-uppercase">Entrena con nuestros videos de ejercicios para adelgazar</h3>
+              <p class="lead py-0 text-bigger">La herramienta perfecta para bajar peso en casa que te premia por mantenerte activo!</p>
               <p class="py-5">
-                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-aerobicos&utm_medium=adwords-landing&utm_campaign=aerobicos">PRUEBA GRATIS</a>
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar">PRUEBA GRATIS</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid py-5 px-sm-5 bg-motinutrition">
+        <div class="row py-5 my-0 align-items-center h-100">
+            <div class="col-12 offset-md-3 col-md-9 text-white text-right px-md-5">
+              <h3 class="display-4 py-4 text-uppercase">Planes nutricionales</h3>
+              <p class="lead py-0 text-bigger">Dietas desarrolladas por expertos nutricionistas para que cumplas tus objetivos.</p>
+              <p class="py-5">
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar">PRUEBA GRATIS</a>
                 </p>
             </div>
         </div>
@@ -221,11 +228,11 @@
     <div class="container-fluid py-5 px-sm-5 bg-app">
         <div class="row py-0 py-lg-5 my-0 align-items-center h-100">
             <div class="col-12 col-md-10 col-lg-9 text-white px-md-5">
-              <h3 class="display-4 py-4 text-uppercase">Tu rutina de ejercicios para entrenar en casa</h3>
+              <h3 class="display-4 py-4 text-uppercase">Rutina de ejercicios para perder peso en casa</h3>
               <p class="lead py-4 text-bigger">Crea tu objetivo, compártelo, reta a tus amigos y haz de ti tu mejor versión.</p>
               <p>Descárgate la aplicación aquí:</p>
-              <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&?utm_source=ejercicios-aerobicos&utm_medium=adwords-landing&utm_campaign=aerobicos" target="_blank"><img src="homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
-              <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&?utm_source=ejercicios-aerobicos&utm_medium=adwords-landing&utm_campaign=aerobicos" target="_blank"><img src="homes/img/logos-footer/apple-store.png" class="img-fluid img-logo" alt="apple app" width="194" height="75"></a>
+              <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar" target="_blank"><img src="homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
+              <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar" target="_blank"><img src="homes/img/logos-footer/apple-store.png" class="img-fluid img-logo" alt="apple app" width="194" height="75"></a>
             </div>
         </div>
     </div>
@@ -261,13 +268,13 @@
 
     <script src="homes/js/tutorial.min.js"></script>
 
-    <script> 
+    <script>
       $('.navbar-nav>li>a').on('click', function(){
         $('.navbar-collapse').collapse('hide');
       });
     </script>
 
-     <!--typo-->    
+     <!--typo-->
     <script src="https://use.typekit.net/wjv2qsz.js"></script>
     <script>
         // <![CDATA[
